[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Im_A_Monster.png" type="Texture" id=1]
[ext_resource path="res://Utilities/Attachable_Tools/Hit_Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utilities/Attachable_Tools/Hurt_Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Sleep_Gremlin.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0
height = 42.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60.875, 64.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.5, 53.75 )

[sub_resource type="Animation" id=4]
resource_name = "Attacking"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:can_attack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_attacks"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:can_attack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Sleep_Gremlin" type="KinematicBody2D"]
light_mask = 0
collision_layer = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 1 )

[node name="Hurt_Box" parent="." instance=ExtResource( 3 )]
collision_layer = 0

[node name="CollisionShape2D" parent="Hurt_Box" index="0"]
shape = SubResource( 2 )

[node name="Hit_Box" parent="." instance=ExtResource( 2 )]
collision_layer = 0

[node name="CollisionShape2D" parent="Hit_Box" index="0"]
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -135.0
margin_top = -90.0
margin_right = 136.0
margin_bottom = -59.0
text = "I am going to attack you with sleep things!!!
               bwahhahahahaha"

[node name="Target_Locations" type="Node2D" parent="."]

[node name="Position2D1" type="Position2D" parent="Target_Locations"]
position = Vector2( 79, -81 )

[node name="Position2D2" type="Position2D" parent="Target_Locations"]
position = Vector2( -88, -83 )

[node name="Position2D3" type="Position2D" parent="Target_Locations"]
position = Vector2( 104, 10 )

[node name="Position2D4" type="Position2D" parent="Target_Locations"]
position = Vector2( -109, 18 )

[node name="Position2D5" type="Position2D" parent="Target_Locations"]
position = Vector2( 0, -122 )

[node name="Attacks" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="body_entered" from="Hit_Box" to="." method="_on_Hit_Box_body_entered"]
[connection signal="body_exited" from="Hit_Box" to="." method="_on_Hit_Box_body_exited"]

[editable path="Hurt_Box"]
[editable path="Hit_Box"]
